<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Linear计算器</string>
    <string name="jianjian1">\t\t开发本APP的初衷，如果使用中遇到问题，请点击该页右上角阅读帮助，若未能帮助到你，请反馈给我们。</string>
    <string name="jianjie2">\n\n如需反馈或联系我们，请发送内容至邮箱：\2606165032@qq.com\n邮件主题请注明Linear！</string>
    <string name="jianjie3">\n\n\t\t本APP是，在此感谢学校支持！同时，特别感谢以下指导：\n 沈。</string>
    <string name="jianjie4">\t\t本APP获\n\t\t项目号：</string>
    <string name="jianjie5">Linear项目团队\t\t\n2024年3月17日\t\t</string>
    <string name="linear">Linear计算器</string>
    <string name="gailvlun">概率论</string>
    <string name="juzhen">矩阵计算</string>
    <string name="sltj">数理统计</string>
    <string name="szjs">数值计算</string>
    <string name="Fanhui">返回</string>
    <string name="MatrixA">矩阵A</string>
    <string name="MatrixB">矩阵B</string>
    <string name="enterMatrix">在此输入矩阵......</string>
    <string name="enterMatrixA">在此输入矩阵A......</string>
    <string name="enterMatrixB">在此输入矩阵B......</string>
    <string name="det">行列式</string>
    <string name="inv">逆矩阵</string>
    <string name="row">行阶梯型</string>
    <string name="zhi">矩阵的秩</string>
    <string name="zhengdinxing">矩阵的正定性</string>
    <string name="zhengjiaobianhuan">正交变换的类型</string>
    <string name="exchangeMatrix">互换矩阵AB的值</string>
    <string name="exchangeMatrixSuccess">AB矩阵的值交换成功</string>
    <string name="noMatrix">至少选中一个矩阵</string>
    <string name="noMatrixA">未输入A矩阵</string>
    <string name="noMatrixB">未输入B矩阵</string>
    <string name="maxPower">幂次最大为20</string>
    <string name="degree">次数</string>
    <string name="matrixmultiply">矩阵相乘/矩阵求幂的结果为：</string>
    <string name="matrixpow">矩阵的幂次（默认1）</string>
    <string name="clear">清除</string>
    <string name="ok">确认</string>
    <string name="help">帮助</string>
    <string name="tztjT">数理统计-特征统计</string>
    <string name="tztj">特征统计</string>
    <string name="fcfx">方差分析</string>
    <string name="fcfxT">数理统计-方差分析</string>
    <string name="xxhg">线性回归</string>
    <string name="xxhgT">数理统计-线性回归</string>
    <string name="jsjy">假设检验</string>
    <string name="jsjyT">数理统计-假设检验</string>
    <string name="SignMatrix">单矩阵</string>
    <string name="MoreMatrix">多矩阵</string>
    <string name="equationSet">方程组</string>
    <string name="SignMatrixT">矩阵计算-单矩阵</string>
    <string name="MoreMatrixT">矩阵计算-多矩阵</string>
    <string name="equationSetT">矩阵计算-方程组</string>
    <string name="interpolationT">数值计算-插值</string>
    <string name="FittingT">数值计算-拟合</string>
    <string name="HexadecimalConversionT">数值计算-进制转换</string>
    <string name="interpolation">插值</string>
    <string name="Fitting">拟合</string>
    <string name="HexadecimalConversion">进制转换</string>
    <string name="EnterData1">在此输入第一组数据</string>
    <string name="EnterData2">在此输入第二组数据</string>
    <string name="EntergailvData">概率数据（可选）</string>
    <string name="samegailv">是否使用等概率</string>
    <string name="EnterK">在此输入k的值</string>
    <string name="Expectation">数学期望：</string>
    <string name="KurtosisCoefficient">峰度系数：</string>
    <string name="variance">方差：</string>
    <string name="coefficientOfSkewness">偏度系数：</string>
    <string name="k_origin">K阶原点矩：</string>
    <string name="CoefficientOfVariation">变异系数：</string>
    <string name="K_center">K阶中心矩：</string>
    <string name="covariance">协方差：</string>
    <string name="coefficientOfAssociation">相关系数：</string>
    <string name="PleaseEntergailv">请输入概率数组</string>
    <string name="wrongAtFirst">第一组数据输入格式错误</string>
    <string name="wrongAtSecond">第二组数据输入格式错误</string>
    <string name="differentLength">数据长度不一致</string>
    <string name="noData">未输入数据</string>
    <string name="noChoice">未选择数据</string>
    <string name="wrongP">P值介于0到1之间</string>
    <string name="wrongData">样本数据输入格式错误</string>
    <string name="pfenweishu">P分位数：</string>
    <string name="median">中位数：</string>
    <string name="EnterSampleData">在此输入样本数据......</string>
    <string name="EnterP">在此输入p值（0~1）：</string>
    <string name="DescriptiveStatistics">描述统计表</string>
    <string name="ANOVA">ANOVA表</string>
    <string name="level">水平</string>
    <string name="average">均值</string>
    <string name="source">来源</string>
    <string name="quadraticSum">平方和</string>
    <string name="DF">自由度</string>
    <string name="meanSquare">均方</string>
    <string name="F_radio">F比</string>
    <string name="FactorA">因子A</string>
    <string name="errorE">误差e</string>
    <string name="sumT">总和T</string>
    <string name="wrongX">数据点x格式有误</string>
    <string name="wrongY">数据点y格式有误</string>
    <string name="dataX">数据点x：</string>
    <string name="dataY">数据点y：</string>
    <string name="computerTable">计算表</string>
    <string name="EnterAverage">样本空间的均值：</string>
    <string name="EnterV">样本空间的标准差（可选）：</string>
    <string name="SignificanceLevel">显著性水平：</string>
    <string name="noAverage">未输入均值</string>
    <string name="wrongMatrixData">数据格式错误</string>
    <string name="zengguanjuzhen">在此输入增广矩阵......</string>
    <string name="jiede">解得：</string>
    <string name="nochazhidian">未输入待插值点</string>
    <string name="noquanzhong">未输入权重</string>
    <string name="nocishu">未输入多项式拟合的次数</string>
    <string name="wrongquanzhong">权重数据格式有误</string>
    <string name="enterdaichazhidian">在此输入待插值点</string>
    <string name="duoxiangshichazhijieguo">多项式插值结果：</string>
    <string name="lagelangrichazhijieguo">拉格朗日插值结果：</string>
    <string name="geshujudiandequanzhong">权重数据（可选）:</string>
    <string name="shuruduoxiangshinihedecishu">在此输入多项式拟合的次数</string>
    <string name="equalquanzhong">是否使用等权重</string>
    <string name="duoxiangshinihejieguo">多项式拟合结果：</string>
    <string name="zhishunihejieguo">指数拟合结果：</string>
    <string name="zhuanhuaqiandeshuzhi">转化前的数值</string>
    <string name="yuanjinshi">原进制</string>
    <string name="zhuanhuahoudeshuzhi">转化后的数值</string>
    <string name="mubiaojinzhi">目标进制</string>
    <string name="zhuanhua">转换</string>
    <string name="error0">本对象无异常</string>
    <string name="error1">出现有矩阵元素的分母为0</string>
    <string name="error2">矩阵维度不一致</string>
    <string name="error21">矩阵维度不一致,无法相加</string>
    <string name="error22">矩阵维度不一致,无法相减</string>
    <string name="error23">矩阵维度不一致,无法相乘</string>
    <string name="error24">矩阵维度不一致,无法相除</string>
    <string name="error3">输入的参数不在允许的范围内</string>
    <string name="error31">第二个参数错误，type==1 构造行向量，type==2 构造列向量，不接受其他参数</string>
    <string name="error32">第二个参数错误，暂不支持对矩阵计算负指数幂</string>
    <string name="error33">参数错误，type==1 按行求和，返回一个列向量;type==2 按列求和，返回一个行向量;type==3 所有元素求和;如果matrix是一个向量，type将不起作用，求和后返回一个值</string>
    <string name="error4">非方阵</string>
    <string name="error41">暂不支持对非方阵求广义逆</string>
    <string name="error42">程序未对非方阵的幂运算进行定义</string>
    <string name="error43">程序未对非方阵的行列式进行定义</string>
    <string name="error5">奇异矩阵无法求逆</string>
    <string name="error6">暂不支持的运算</string>
    <string name="error7">输入的格式不正确</string>
    <string name="error71">请保证你所输入的是增广矩阵(矩阵列数=矩阵行数+1)</string>
    <string name="error72">该系数矩阵是奇异的(行列式为0),故原方程组有无穷多解</string>
    <string name="errorDefault">出现未定义的错误</string>
    <string name="chazhi">在插值点上的插值结果为：</string>
    <string name="duoxiangshiwei">多项式为：</string>
    <string name="chazhidedao">插值得到的多项式：f(x) = </string>
    <string name="huajianhoude">化简后的多项式为：</string>

    <string name="wrongDet">行列式求值发生错误</string>
    <string name="zhengdinpandin">正定的：顺序主子式全大于零\n负定的：奇数阶顺序主子式小于零，偶数阶顺序主子式大于零\n半正(负)定的：顺序主子式大（小）于等于零\n不定的：既不是半正定也不是半负定\n</string>
    <string name="shunxuzhuzishi">该矩阵的顺序主子式从1阶到</string>
    <string name="jieyiciwei">阶依次为</string>
    <string name="suoyi">所以，</string>
    <string name="zhengdinde">该矩阵是正定的</string>
    <string name="fudinde">该矩阵是负定的</string>
    <string name="all0">恕我才疏学浅，我也不知道顺序主子式全为0的矩阵是个啥，去问老师吧</string>
    <string name="banzhengdin">该矩阵是半正定的</string>
    <string name="banfudin">该矩阵是半负定的</string>
    <string name="budin">该矩阵是不定的</string>
    <string name="enterFangzhen">请输入方阵</string>
    <string name="wrongDta1">数据错误</string>

    <string name="firstZhengjiaobianhuan">该矩阵与其转置的乘积的行列式为1，所以该矩阵为第一种正交变换，也称为旋转</string>
    <string name="SecondZhengjiaobianhuan">该矩阵与其转置的乘积的行列式为-1，所以该矩阵为第二种正交变换，也称为镜面反射</string>
    <string name="noZhengjiaobianhuan">这不是正交变换，其与其转置的乘积的行列式为</string>
    <string name="nozhengjiaobianhuan">出现错误，不能判断正交变换的类型</string>
    <string name="fashengcuowu">发生错误</string>

    <string name="baozhengshizengguangjuzhen">请保证你所输入的是增广矩阵(矩阵列数=矩阵行数+1)</string>
    <string name="jiyide">该系数矩阵是奇异的(行列式为0),故原方程组有无穷多解</string>
    <string name="qingshuruzhengshu">幂次只能为整数</string>
</resources>