<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
<TableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TableRow>
        <EditText
            android:id="@+id/et_1"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:hint="@string/zhuanhuaqiandeshuzhi"
            android:maxLines="3"
            android:minLines="3"
            android:background="@drawable/shape_border"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/et_2"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:hint="@string/yuanjinshi"
            android:maxLines="3"
            android:inputType="number"
            android:minLines="3"
            android:layout_margin="10dp"
            android:background="@drawable/shape_border"
            android:layout_height="wrap_content"
            />
    </TableRow>
    <TextView
        android:text="To"
        android:textSize="25dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TableRow>
        <EditText
            android:id="@+id/et_3"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:hint="@string/zhuanhuahoudeshuzhi"
            android:maxLines="3"
            android:minLines="3"
            android:background="@drawable/shape_border"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/et_4"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:hint="@string/mubiaojinzhi"
            android:maxLines="3"
            android:inputType="number"
            android:minLines="3"
            android:layout_margin="10dp"
            android:background="@drawable/shape_border"
            android:layout_height="wrap_content"
            />
    </TableRow>
    <Button
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:text="@string/zhuanhua"
        android:id="@+id/change"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_border"
        />
</TableLayout>
</RelativeLayout>