<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProbabilityTheory">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/Fanhui"
            android:onClick="back"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:layout_alignParentLeft="true"
            android:background="@drawable/shape_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/gailvlun"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/help"
            android:onClick="help"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_alignParentRight="true"
            android:textColor="@color/black"
            android:background="@drawable/shape_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

<!--    第一组-->
    <RelativeLayout
        android:id="@+id/data_1"
        android:layout_marginTop="10dp"
        android:layout_below="@id/rl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/clear1"
            android:text="@string/clear"
            android:onClick="clear"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/shape_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/et_1"
            android:layout_width="wrap_content"
            android:layout_height="80dp"

            android:layout_centerHorizontal="true"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/check1"
            android:layout_toRightOf="@id/clear1"
            android:background="@drawable/shape_border"
            android:gravity="left"

            android:hint="@string/EnterData1"
            android:maxLines="3"
            android:minLines="3"
            android:textColor="@color/black" />
        <CheckBox
            android:id="@+id/check1"
            android:checked="true"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <!--    第2组-->
    <RelativeLayout
        android:id="@+id/data_2"
        android:layout_marginTop="10dp"
        android:layout_below="@id/data_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/clear2"
            android:text="@string/clear"
            android:onClick="clear"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/shape_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/et_2"
            android:hint="@string/EnterData2"
            android:gravity="left"
            android:layout_centerHorizontal="true"
            android:minLines="3"
            android:maxLines="3"
            android:background="@drawable/shape_border"
            android:textColor="@color/black"
            android:layout_toRightOf="@id/clear2"
            android:layout_toLeftOf="@id/check2"
            android:layout_width="match_parent"
            android:layout_height="80dp"/>
        <CheckBox
            android:id="@+id/check2"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:checked="true"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <!--    第3组-->
    <RelativeLayout
        android:id="@+id/data_3"
        android:layout_marginTop="10dp"
        android:layout_below="@id/data_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/clear3"
            android:text="@string/clear"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="5dp"
            android:onClick="clear"
            android:background="@drawable/shape_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/et_3"
            android:hint="@string/EntergailvData"
            android:gravity="left"
            android:layout_centerHorizontal="true"
            android:minLines="3"
            android:maxLines="3"
            android:background="@drawable/shape_border"
            android:textColor="@color/black"

            android:layout_toRightOf="@id/clear3"
            android:layout_toLeftOf="@id/check3"
            android:layout_width="match_parent"
            android:layout_height="80dp"/>
        <CheckBox
            android:visibility="invisible"
            android:id="@+id/check3"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:checked="true"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl12"
        android:layout_below="@id/data_3"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/samegailv"
            android:textColor="@color/black"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/switch_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Switch
            android:id="@+id/switch_"
            android:checked="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>
<RelativeLayout
    android:layout_below="@id/rl12"
    android:id="@+id/rl3"
    android:layout_width="match_parent"
    android:layout_marginTop="10dp"
    android:layout_height="wrap_content">
    <EditText
        android:id="@+id/ed_k"
        android:layout_width="150dp"
        android:maxLines="1"
        android:background="@drawable/shape_border"
        android:hint="@string/EnterK"
        android:inputType="number"
        android:layout_marginLeft="20dp"
        android:layout_height="wrap_content"/>
    <Button
        android:text="@string/ok"
        android:onClick="submit"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:background="@drawable/shape_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</RelativeLayout>
    <TableLayout
        android:layout_below="@id/rl3"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            >
            <TextView
                android:id="@+id/tv_1"
                android:text="@string/Expectation"
                android:textColor="@color/black"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/tv_2"
                android:text="@string/KurtosisCoefficient"
                android:layout_width="0dp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                />

        </TableRow>
        <TableRow
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            >
            <TextView
                android:id="@+id/tv_3"
                android:text="@string/variance"
                android:textColor="@color/black"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/tv_4"
                android:text="@string/coefficientOfSkewness"
                android:layout_width="0dp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                />

        </TableRow>
        <TableRow
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            >
            <TextView
                android:id="@+id/tv_5"
                android:text="@string/k_origin"
                android:textColor="@color/black"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/tv_6"
                android:text="@string/CoefficientOfVariation"
                android:layout_width="0dp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                />

        </TableRow>
        <TableRow
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            >
            <TextView
                android:id="@+id/tv_7"
                android:text="@string/K_center"
                android:textColor="@color/black"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                />

        </TableRow>
        <TableRow
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            >
            <TextView
                android:id="@+id/tv_8"
                android:text="@string/covariance"
                android:textColor="@color/black"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/tv_9"
                android:text="@string/coefficientOfAssociation"
                android:layout_width="0dp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                />

        </TableRow>
    </TableLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>